--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>高德地图天气插件</title>
-	<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.0&key=您的key"></script>
 	<link rel="stylesheet" href="css/base-wer.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.0&key=您的key"></script>
+	<!-- 注意一定要输入key才可以显示出地图 -->
 </head>
 <body>
 	<div class="g-around-list g-weater-map"></div>
